Closed Bug 325193 Opened 19 years ago Closed 19 years ago

Notification window shows up irregularly, and causes form malfunction

Categories

(Camino Graveyard :: HTML Form Controls, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: whoshot69, Assigned: sfraser_bugs)

Details

(Keywords: fixed1.8.0.1, fixed1.8.1)

Attachments

(3 files)

User-Agent:       Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20051229 Camino/1.0b2
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8) Gecko/20051229 Camino/1.0b2



Reproducible: Always
Is this a serious bug? I have no clue what it's about.

I'm going to resolve this as "INVALID" if we don't hear from the reporter soon.
Assignee: mikepinkerton → sfraser_bugs
URL: fdsafds
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: d → Sheet shows in in lower left corner of the screen
Notice the pop up window on the bottom left of the screen. It shows up when I clicked on the "Announcement" link on the right of the screen. (i uploaded the html document that causes this error too for you to try it out)
Sorry about the original post. testing this bug out caused the following additional problem (which submitted the report before it was completed):

If you keep that notification window open (see image attachement), and try to type into a form element in another Camino window, it inserts the text backwards...wierdest thing I've seen.

For example, if I typed "Hello World", it would come out as "dlroW olleH"
Component: General → HTML Form Controls
Summary: Sheet shows in in lower left corner of the screen → Notification window shows up irregularly, and causes form malfunction
(In reply to comment #4)
> If you keep that notification window open (see image attachement), and try to
> type into a form element in another Camino window, it inserts the text
> backwards...wierdest thing I've seen.

Bug 179307.
Status: NEW → ASSIGNED
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: