Fix bug 325193: sheet shows up in lower left corner of the screen. Fixed by converting it to a modal dialog if its parent window is not visible.